--- a/Interbank/Views/Simuladors/Index.cshtml
+++ b/Interbank/Views/Simuladors/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nueva simulación", "Create")
 </p>
 <table class="table">
     <tr>
@@ -25,9 +25,6 @@
             @Html.DisplayNameFor(model => model.montoDelCredito)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.importeAsegurado)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.val_CuotaIncial)
         </th>
         <th>
@@ -40,67 +37,50 @@
             @Html.DisplayNameFor(model => model.por_SeguroDesgravamen)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.por_SeguroVehicular)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.tea)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.tem)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.plazo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tipoSeguro)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tipoCuotaIncial)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.montoDelCredito)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.importeAsegurado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.val_CuotaIncial)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NCuotas)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.por_CuotaIncial)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.por_SeguroDesgravamen)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.por_SeguroVehicular)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tea)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tem)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SimuladorID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SimuladorID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SimuladorID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.plazo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.tipoSeguro)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.tipoCuotaIncial)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.montoDelCredito)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.val_CuotaIncial)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NCuotas)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.por_CuotaIncial)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.por_SeguroDesgravamen)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.tea)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SimuladorID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SimuladorID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SimuladorID }) |
+                @Html.ActionLink("Cronograma", "Cronograma", new { id = item.SimuladorID })
+
+
+            </td>
+        </tr>
+    }
 
 </table>
