--- a/InterbankV2/Views/Simuladors/Create.cshtml
+++ b/InterbankV2/Views/Simuladors/Create.cshtml
@@ -1,17 +1,18 @@
-﻿@model Interbank.Models.Simulador
+﻿@model InterbankV2.Models.Simulador
 
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Simulador</h4>
         <hr />
@@ -45,6 +46,9 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.montoDelCredito, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.montoDelCredito, "", new { @class = "text-danger" })
+                @{int auxid = ViewBag.IdCliente;}
+                @Html.Hidden("IdCliente", auxid)
+
             </div>
         </div>
 
