--- a/InterbankV2/Views/Simuladors/Edit.cshtml
+++ b/InterbankV2/Views/Simuladors/Edit.cshtml
@@ -1,21 +1,24 @@
-﻿@model Interbank.Models.Simulador
+﻿@model InterbankV2.Models.Simulador
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Simulador</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.SimuladorID)
+
         <div class="form-group">
             @Html.LabelFor(model => model.plazo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -47,10 +50,12 @@
                 @Html.ValidationMessageFor(model => model.montoDelCredito, "", new { @class = "text-danger" })
             </div>
         </div>
+        @{int auxid = ViewBag.IdCliente;}
+        @Html.Hidden("IdCliente", auxid)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
