--- a/InterbankV2/Views/Simuladors/Edit.cshtml
+++ b/InterbankV2/Views/Simuladors/Edit.cshtml
@@ -62,7 +62,8 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Ir al menu", "Index", new { id = ViewBag.IdCliente })
+
 </div>
 
 @section Scripts {
