--- a/InterbankV2/Views/Usuarios/Create.cshtml
+++ b/InterbankV2/Views/Usuarios/Create.cshtml
@@ -50,5 +50,6 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+@Html.ActionLink("Ir al menu", "Index", new { ViewBag.IdCliente })
+
 </div>
